# snapclient

./: README.md  partitions.csv  sdkconfig.defaults  sdkconfig_MAX98357A_ESP32-S2  sdkconfig_PCM5102A  sdkconfig_PCM5102A_Olimex-ESP32-PoE  sdkconfig_PCM5102A_WT32-ETH01  sdkconfig_TAS5805M  sdkconfig_adau1961  sdkconfig_for_esp_snapserver  sdkconfig_lyrat_v4.3
components/audio_board/: Kconfig.projbuild
components/custom_board/ma120x0/: MerusAudio.c
components/custom_board/tas5805m/: tas5805m.c
components/dsp_processor/: CMakeLists.txt  Kconfig.projbuild  dsp_processor.c
components/dsp_processor/include/: dsp_processor.h  dsp_types.h
components/dsp_processor_settings/: CMakeLists.txt  dsp_processor_settings.c
components/dsp_processor_settings/include/: dsp_processor_settings.h
components/lightsnapcast/: CMakeLists.txt  player.c  snapcast_protocol_parser.c
components/lightsnapcast/include/: player.h  snapcast_protocol_parser.h
components/net_functions/: CMakeLists.txt
components/network_interface/: CMakeLists.txt  Kconfig.projbuild  wifi_interface.c
components/ota_server/: ota_server.c
components/settings_manager/: settings_manager.c
components/snapclient/: CMakeLists.txt  Kconfig.projbuild  connection_handler.c  snapclient.c  snapclient_helper.c
components/snapclient/include/: connection_handler.h  snapclient.h  snapclient_helper.h  snapclient_settings.h
components/tas5805m_settings/: tas5805m_settings.c
components/ui_http_server/: CMakeLists.txt  ota_handlers.c  ui_http_server.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+15 files in other folders)
